category是资源组的概念。label和prompt都应该属于某个category。category删除之后，关联的prompt&label都应该被删除。基于这个原则对大量代码做了调整。 目前只能查看属于自己的资源，未来需要能够多人管理同一个资源，引入权限的概念。 彻底删除is_public的逻辑。 支持Prompt设置适用的model。 支持Prompt设置名字，根据名字来查找。 增加客户端，根据name来获取需要的Prompt（自动渲染），并返回适用的model。
代码逻辑优化：use ManyToManyField labels instead of PromptLabel;

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -22,10 +22,10 @@
     <meta property="og:description" content="Welcome to Vidura AI, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.">
     <meta name="twitter:description" content="Are you interested in ChatGPT prompt-engineering ? Vidura AI is here to help">
     
-    <meta property="og:image" content="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
-    <meta name="twitter:image" content="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
+    <meta property="og:image" content="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
+    <meta name="twitter:image" content="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
     <title>Vidura {% block title %}{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
+    <link rel="icon" type="image/x-icon" href="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work Sans">
@@ -166,9 +166,9 @@
         <div class="container">
 
             <div class="navbar-brand">
-              <img class="navbar-item logo" src="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png" alt="My image">
+              <img class="navbar-item logo" src="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png" alt="My image">
                 <a class="navbar-item" href="/">
-                    <strong class="logo-name">Vidura</strong> &nbsp;<p>Beta</p>
+                    <strong class="logo-name">Prompt Hub</strong> &nbsp;<p>Beta</p>
                 </a>
             </div>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -179,10 +179,11 @@
               {% if user.is_authenticated %}
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="{% url 'list_categories' %}">
-                        {% trans "Categories" %}
-                    </a>
-                    <a class="navbar-item" href="{% url 'editor' %}"> {% trans "Editor" %} </a>
+
+                    <a class="navbar-item" href="{% url 'list_activities' %}"> {% trans "Activities" %} </a>
+
+                    <a class="navbar-item" href="{% url 'api-root' %}"  target="_blank"> {% trans "API" %} </a>
+
                     <!-- Add this inside your navbar div, adjust accordingly -->
                     <div class="navbar-item">
                         <form method="GET" action="{% url 'search' %}">
