--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -100,7 +100,7 @@
   </style>
   <div class="container">
     <h1 class="title">{% trans "Categories" %}</h1>
-    <p style="font-weight: 600">{% trans "Welcome to Vidura, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts." %}</p>
+    <p style="font-weight: 600">{% trans "Welcome to PromptHub, a Large Language Model Prompt Management System (LPMS) designed for AI applications and developers. It enables you to easily create, retrieve, and search through your prompts." %}</p>
   </div><br />
   <button class="button add-category" id="add-category-button">
     <span class="icon">
