--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -15,16 +15,12 @@
     </script>
     <meta charset="utf-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Vidura Cloud - Bake your ChatGPT prompts">
-    <meta name="twitter:title" content="Vidura Cloud - Bake your ChatGPT prompts">
-    
-    <meta name="description" content="Welcome to Vidura AI, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.">
-    <meta property="og:description" content="Welcome to Vidura AI, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.">
-    <meta name="twitter:description" content="Are you interested in ChatGPT prompt-engineering ? Vidura AI is here to help">
-    
+    <meta property="og:title" content="Prompt Hub">
+
+    <meta name="description" content="Welcome to PromptHub, a Large Language Model Prompt Management System (LPMS) designed for AI applications and developers.">
+    <meta property="og:description" content="Welcome to PromptHub, a Large Language Model Prompt Management System (LPMS) designed for AI applications and developers.">
     <meta property="og:image" content="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
-    <meta name="twitter:image" content="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
-    <title>Vidura {% block title %}{% endblock %}</title>
+    <title>PromptHub {% block title %}{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -273,25 +269,7 @@
           });
         });
     </script>
-    <footer class="footer">
-      <div class="container">
-        <div class="columns is-vcentered">
-          <div class="column is-6">
-            <p>With love <i class="fas fa-heart" style="color: red"></i> from <a href="https://happy-pythonist.com/" target="_blank">happy-pythonist.com</a></p>
-            <p> All rights reserved @ {% now 'Y' %}.
-              <a href="https://github.com/narenaryan/Vidura" target="_blank">
-              GitHub&nbsp<i class="fab fa-github"></i>
-           </a></p>
-          </div>
-          <div class="column is-2">
-            <a href="https://vidura-docs.s3.us-west-2.amazonaws.com/Terms+%26+Conditions+Vidura+Cloud.pdf" target="_blank">Terms and conditions</a>
-          </div>
-          <div class="column is-2">
-            <a href="https://vidura-docs.s3.us-west-2.amazonaws.com/Privacy+Policy+Vidura+cloud.pdf" target="_blank">Privacy policy</a>
-          </div>
-        </div>
-      </div>
-    </footer>
+
     
 </body>
 </html>
