--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -21,7 +21,7 @@
     <meta property="og:description" content="Welcome to PromptHub, a Large Language Model Prompt Management System (LPMS) designed for AI applications and developers.">
     <meta property="og:image" content="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
     <title>PromptHub {% block title %}{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href="https://prompt-hub.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo11.png">
+    <link rel="icon" type="image/x-icon" href="https://dminfra-static-files.oss-cn-shanghai.aliyuncs.com/prompt-hub-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work Sans">
