增加last_used_at字段，记录最近使用时间（通过API使用）

--- a/promptbook/templates/list_prompts.html
+++ b/promptbook/templates/list_prompts.html
@@ -160,6 +160,7 @@
             </div>
             <!-- 最后更新时间 -->
             <p class="is-size-7 mb-4">{% trans "Last updated:" %} {{ prompt.modified_at }}</p>
+            <p class="is-size-7 mb-4">{% trans "Last used:" %} {{ prompt.last_used_at }}</p>
             <!-- 删除按钮 -->
             <div class="buttons are-small" >
                 <button class="button delete-prompt" data-prompt-id="{{ prompt.id }}">
